--- a/WishList/Views/Item/Create.cshtml
+++ b/WishList/Views/Item/Create.cshtml
@@ -2,5 +2,7 @@
 <h3>Add item to wishlist</h3>
 <form asp-action="create">
     <input asp-for="Description"/>
-    <span asp-validation-for="Description"><button type="submit">Add Item</button></span>
+    <span asp-validation-for="Description">
+        <button type="submit">Add Item</button>
+    </span>
 </form>
